📝 (docs): update API documentation to use specific response wrappers
✨ (models): add response wrapper structs for user and location

♻️ (handlers): update handlers to use new response wrapper structs
